Fix button spacing

--- a/css/style.css
+++ b/css/style.css
@@ -20,27 +20,36 @@
 #bestOfFive{
   font-size: 5rem;
   font-weight: bold;
-  color: rgba(255,	123,	114,	1);
+  color: rgba(255,	123,	114,	1)	;
 
 }
 
+a{
+  color: rgb(121,192,255);
+  text-decoration: none;
+}
+
 body {
-  background: rgba(15,	207,	125, 1); 
+  /* background: rgba(15,	207,	125, 1);  */
+  background: #333;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 1.6rem;
-  color: rgb(22, 41, 95);
+  color: rgba(15,	207,	125, 1);
   display: flex;
   justify-content: center;
   height: 100vh;
+  text-align: center;
   
 }
 
 
 button{
-  background: rgb(22, 41, 95);
+  background: rgb(210	,109	,206	);
   color:rgba(15,	207,	125, 1); 
-  padding: .5rem 1.5rem;
+  padding: 1rem 2rem;
   margin: 1rem 0;
+  border-radius: 10em;
+  border: none;
 }
 
 .container{
@@ -63,12 +72,12 @@ html{
 
 .space-between{
   justify-content: space-between;
-  width: 100%;
+  gap: 3em;
 }
 
 #results{
   margin: 3rem;
   font-size: 3rem;
   font-weight: bold;
-  color: rgb(223, 45, 184);
+  color: rgb(121,192,255);
 }
